--- a/src/components/InteractivePiano/PianoSettings/styles.css
+++ b/src/components/InteractivePiano/PianoSettings/styles.css
@@ -1,3 +1,12 @@
 .interactive-piano__piano-settings__wrapper {
   height: 40px;
 }
+
+.interactive-piano__settings-button {
+  margin-top: 8px;
+  margin-left: 8px;
+}
+
+.interactive-piano__settings-button:first-of-type {
+  margin-left: 0;
+}
